--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -35,6 +35,6 @@
     "vite": "^5.4.1"
   },
   "engines": {
-  "node": ">=14.0.0"
-}
+    "node": ">=14.0.0"
+  }
 }
